--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -1,5 +1,7 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="RustWorkshopUploader.Properties" GeneratedClassName="Settings">
+
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)"
+              GeneratedClassNamespace="RustWorkshopUploader.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="Culture" Type="System.Globalization.CultureInfo" Scope="User">
