Code cleanup before release.

--- a/RustWorkshopUploader.csproj
+++ b/RustWorkshopUploader.csproj
@@ -12,6 +12,7 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
     <Deterministic>false</Deterministic>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -24,7 +25,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -158,7 +158,6 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy $(SolutionDir)\Dependencies\steam_api64.dll $(TargetDir) /y
-copy $(SolutionDir)\Dependencies\steam_appid.txt $(TargetDir) /y</PostBuildEvent>
+    <PostBuildEvent>copy $(SolutionDir)\Dependencies\steam_api64.dll $(TargetDir) /y</PostBuildEvent>
   </PropertyGroup>
 </Project>
